benchmarks/script-tests/mcsim-6.2.0/sim/random.h

/* Several types of random variates */
double BetaRandom (double alpha, double beta, double a, double b);
double BinomialBetaRandom (double Expectation, double alpha, double beta);
double BinomialRandom (double p, long n);
double CauchyRandom (double dScale);
double Chi2Random (double dof);
double ExpRandom (double beta);
double InvGGammaRandom (double alpha, double beta);
double TruncInvGGammaRandom (double alpha, double beta, double a, double b);
double GGammaRandom (double alpha, double beta);
double LogNormalRandom (double dGeoMean, double dGeoSD);
double GenLogNormalRandom (double dMean, double dSDNorm, double dSDLogNorm);
double StudentTRandom (double dof, double dMean, double dSD);
double LogUniformRandom (double a, double b);
long   NegativeBinomialRandom (double r, double p);
double NormalRandom (double dMean, double dSD);
double PiecewiseRandom (double min, double a, double b, double max);
long   PoissonRandom (double mu);
double TruncLogNormalRandom (double dGeoMean, double dGeoSD,
                             double a, double b);
double TruncNormalRandom (double dMean, double dSD, double a, double b);
double UniformRandom (double a, double b);