benchmarks/script-tests/mcsim-6.2.0/sim/sim.h

/* ----------------------------------------------------------------------------
   Typedefs
*/

/* Union of two types of variables: constants and input fns */

typedef union tagUVAR {
  double dVal;
  PIFN pifn;
} UVAR; /* tagUVAR */
/* Modification specification for one variable */

typedef struct tagVARMODIFICATION {
  HVAR hvar; /* Handle to the variable */
  UVAR uvar; /* Union of variable value or input function spec */
} VARMODIFICATION, *PVARMOD; /* tagVARMODIFICATION */
/* Specification of integrator settings */

typedef struct tagINTSPEC {
  int     iAlgo;          /* one of IM_ types */

  double  dRtol;          /* relative error tolerance */
  double  dAtol;          /* absolute error tolerance */

  /* Lsodes specifics */ 
  long    iopt;           /* optional inputs flag */
  long    itask;          /* type of work */
  long    itol;           /* type of error checking */
  long    iMf;            /* 0: nonstiff; 1: stiff; 2: stiff, jac supplied */
  long    iDSFlag;        /* lsodes return flag */
  long    liw;            /* length of iwork array */
  long    lrw;            /* length of rwork array */
  PLONG   iwork;          /* working array pointer */
  PDOUBLE rwork;          /* working array pointer */

  /* Cvodes specifics */
  int    maxsteps;        /* Maximum number of internal steps before t_out */
  int    maxnef;          /* Maximum number of error test failures */
  int    maxcor;          /* Maximum number of nonlinear iterations */
  int    maxncf;          /* Maximum number of convergence failures */
  double nlscoef;         /* Coefficient in the nonlinear convergence test */
  
  /* Euler specifics */
  double  dTStep;         /* time step for Euler */

} INTSPEC, *PINTSPEC; /* tagINTSPEC */
/* Output specification */

typedef struct tagOUTSPEC {
  int     nOutputs;           /* Number of outputs statements */
  PLIST   plistPrintRecs;     /* List of records from Print()'s */
  PSTR    *pszOutputNames;    /* Array of output names */
  HVAR    *phvar_out;         /* Array of handles to outputs */

  int     nData;              /* Number of data statements */
  PLIST   plistDataRecs;      /* List of records from Data()'s */
  PSTR    *pszDataNames;      /* Array of output names */
  HVAR    *phvar_dat;         /* Array of handles to outputs */

  /* The lists are converted into the following */

  PINT    pcOutputTimes;    /* Count of output times for each output */
  PINT    piCurrentOut;     /* Index to current output for each output */
  PDOUBLE *prgdOutputTimes; /* Array of output times for each output */
  PDOUBLE *prgdOutputVals;  /* Array of output values for each output */

  int     cDistinctTimes;   /* Count of distinct output times for all
                               outputs */
  PDOUBLE rgdDistinctTimes; /* Array of distinct output times  for all
                               outputs */

  PINT    pcData;           /* Count of values for each data */
  PDOUBLE *prgdDataVals;    /* Array of values for each data */

} OUTSPEC, *POUTSPEC; /* tagOUTSPEC */
/* Monte Carlo Variation for one parameter */

typedef struct tagMCVAR {
  PSTR    pszName;          /* Model variable name */
  HVAR    hvar;             /* Handle to the model variable to be modified */
  double  dVal;             /* Current value */
  PDOUBLE pdVal;            /* Pointer to value */
  double  dVal_mean;        /* Sampled mean */
  double  dVal_var;         /* Sampled variance */

  int     iDepth;           /* Level (to distinguish vars with same hvar) */
  int     iType;            /* One of MCV_ distribution types */

  HVAR    hParm[4];         /* Handles to model vars for 4 distrib. params */
  double  dParm[4];         /* Values of fixed distribution parameters */
  PDOUBLE pdParm[4];        /* Pointers to symbolic distribution parameters */
  int     iParmType[4];     /* distrib. parameter types (const., param., 
                               pred., or data) */

  struct  tagMCVAR *pMCVParent[4]; /* Pointers to parents of this var (vars on
                                      which this var depends) */
  PLIST   plistDependents;  /* List of MCvars depending directly on this one */
  long    nDependents;
  struct  tagMCVAR **rgpDependents;

  BOOL    bExptIsDep;       /* True if experiment is dependent on this var */
  BOOL    bIsFixed;         /* True if var is fixed */
  BOOL    bGibbs;           /* True if its conditional distrib. is known */
  long    lJumps;           /* Number of MH jumps for this param */
  long    lCount;           /* Number of data values eventually attached */
  double  dKernelSD;        /* MCMC jumping kernel SD */
  double  dMaxKernelSD;     /* Maximum value of jumping kernel SD */

  PDOUBLE pdSum;            /* Running sum of sampled values */
  PDOUBLE pdSumSq;          /* Running sum of squared deviates from mean */

} MCVAR, *PMCVAR; /* tagMCVAR */
typedef struct tagGIBBSDATA {
  long    nMaxIter;          /* Number of iterations */
  long    nSimTypeFlag;      /* Number of iterations before vector sampling */
  long    nPrintFreq;        /* requests output every nPrintFreq iterations */
  long    nPrintIter;        /* Number of final iterations to print */
  long    nMaxPerkSetIter;   /* Maximum of iterations to set the perk scale */

  PSTR    szGout;            /* Filename for output */
  PFILE   pfileOut;          /* File pointer for output */

  PSTR    szGrestart;        /* Filename for restart parameter vectors */
  PFILE   pfileRestart;      /* File pointer for restart */

  PSTR    szGdata;           /* Filename for input data */

  PFILE   pfilePerks;        /* File pointer for perks scale */

  int     nPerks;            /* Number of perks for tempered MCMC */
  PDOUBLE rgdPerks;          /* Array of inverse temperatures (perks) */
  PLONG   rglTransAttempts; 
  PLONG   rglTransAccepts;
  int     indexT;            /* Index of current perk */
  PDOUBLE rgdlnPi;           /* Pseudo-priors (one per perk) */
  PLONG   rglCount;          /* Count of samples at given perks */
  double  dCZero;            /* Robbins-Munro updating rate parameter */
  double  dNZero;            /* Robbins-Munro updating decay parameter */
  int     startT;            /* Index of actual starting perk */
  int     endT;              /* Index of actual ending perk */

} GIBBSDATA, *PGIBBSDATA; /* tagGIBBSDATA */
typedef struct tagMONTECARLO {
  long nRuns;               /* Number of Monte Carlo runs */
  long lRun;                /* Number of current Run */

  PSTR  szMCOutfilename;    /* File name for Monte Carlo output */
  PFILE pfileMCOut;         /* File for Monte Carlo output */

  PSTR  szSetPointsFilename;/* File name for set points */
  PFILE pfileSetPoints;     /* File of set points */

  PLIST plistMCVars;        /* List of MCVAR record, variation specs */

  /* The list is converted to the following */
  long   nParms;            /* Count of parameters */
  double *rgdParms;         /* The actually used parameter vector */
  HVAR   *rghvar;           /* Array of handles to the parameters */
  MCVAR  **rgpMCVar;        /* A priori distributions for each */

  long   nSetParms;         /* Count of setpoint parameters */

  int    style;             /* either forward or backward for optimal design */

} MONTECARLO, *PMONTECARLO; /* tagMONTECARLO */
/* Record of info about the model */

typedef struct tagMODELINFO {
  long      nStates;
  long      nModelVars;

  HVAR      *pStateHvar;	/* hvars of state variables */

  PDOUBLE   pdModelVars;

} MODELINFO, *PMODELINFO; /* tagMODELINFO */
/* Record of information for one experiment.
   An experiment specifies a set of experimental
   conditions, parameter settings, input levels, etc.
 */

typedef struct tagEXPERIMENT {
  int iExp;                 /* Number of this experiment */

  double dT0;               /* Initial time */
  HANDLE hT0;               /* Handle to initial time */

  double dTfinal;
  double dTime;             /* Current Time */

  PMODELINFO pmodelinfo;    /* Pointer to the model information */
  PLIST plistParmMods;      /* List of parameter mods (elt = PVARMOD) */

  INTSPEC is;               /* Integrator spec, this experiment */
  OUTSPEC os;               /* Output spec, this experiment */

  double dLnLike;           /* Log-likelihood */
  double dLnLikeSave;

} EXPERIMENT, *PEXPERIMENT; /* tagEXPERIMENT */
/* Information for each instance of a level */

typedef struct tagLEVEL {
  int    iDepth;                           /* Depth of this level */
  int    iSequence;                        /* Instance # of this level */
  int    iInstances;                       /* # of instances of next level */
  struct tagLEVEL *pLevels[MAX_INSTANCES]; /* Pointers to sublevels */

  PLIST   plistVars;     /* Vars, other than those in Distrib */
  long    nFixedVars;    /* Count of fixed parameters */
  PVARMOD *rgpFixedVars; /* Array of var values (from plistVars) */

  PLIST   plistMCVars; /* List of MCVAR records, variation specs */
  long    nMCVars;     /* Count of parameters */
  PMCVAR *rgpMCVars;   /* Array of MCVAR records (from plistMCVars) */

  PLIST   plistLikes;  /* List of MCVAR records, likelihood specs */
  long    nLikes;      /* Count of likelihoods */
  PMCVAR *rgpLikes;    /* Array of MCVAR records (from plistLikes) */

  PEXPERIMENT pexpt;   /* Ptr to expt struct, NULL if not expt
                          EXPERIMENT is used for compatibility */ 

} LEVEL, *PLEVEL; /* tagLEVEL */
/* Defines an analysis for an input file */

typedef struct tagANALYSIS {

  int  rank;                /* Parallel processor ID */
  int  size;                /* Number of parallel processors used */

  BOOL bDependents;         /* Debug flag for printing dependents to stderr */
  BOOL bOutputIter;         /* Flag for printing iteration numbers */
  int  nOutputFreq;         /* Flag for frequency of iteration printing */
  BOOL bPrintConvergence;   /* Flag for MCMC convergence printing */

  int  iType;               /* Type of analysis. One of AT_ types */

  WORD      wContext;       /* Context flag used during input processing */
  double    dSeed;          /* Random seed used for all analyses */

  MODELINFO modelinfo;      /* The model we are using */

  int iDepth;               /* Depth of levels */
  int iCurrentDepth;
  int iInstances;           /* Number of instances of level 1 */
  int iExpts;               /* Total number of experiments at all levels */

  PLEVEL pLevels[MAX_INSTANCES];    /* Pointer to level 1 structures */
  PLEVEL pCurrentLevel[MAX_LEVELS]; /* Pointers to currently nested structs */
  int iInstance[MAX_LEVELS];        /* Sequence of instances, e.g., toplevel 1,
                                       subject 2, experiment 3 */

  EXPERIMENT  expGlobal;            /* Global experiment settings */

  PSTR  szOutfilename;              /* Name of file for regular output */
  PFILE pfileOut;                   /* Pointer to file */
  BOOL  bCommandLineSpec;           /* Output file specified on command line */
  BOOL  bAllocatedFileName;         /* Output file name should be freed */

  PEXPERIMENT rgpExps[MAX_INSTANCES];  /* List of pointer to experiments */
  PEXPERIMENT pexpCurrent;             /* Experiment being currently defined */

  PLIST plistVars;      /* Global variables to set */

  MONTECARLO    mc;     /* Monte Carlo specification data */
  GIBBSDATA     gd;     /* MCMC specification data */

} ANALYSIS, *PANALYSIS; /* tagANALYSIS */